Fix background image clipping.

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-y:auto;
 }
 
 .description-overlay {
